# triangle-peg

./: .gitignore  LICENSE  meson.build  windows.ini
include/: peg.h  utils.h
resources/: bg.xcf
src/: main.c  peg.c  utils.c
subprojects/: raylib.wrap
subprojects/raylib-5.0_win64_mingw-w64/: .meson-subproject-wrap-hash.txt  meson.build
